--- a/Source/Outfitted/Source.csproj
+++ b/Source/Outfitted/Source.csproj
@@ -1,105 +1,105 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <!--Project was exported from assembly: D:\SteamLibrary\steamapps\workshop\content\294100\3454809174\1.5\Assemblies\Outfitted.dll-->
-  <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4BF28CA7-16EF-4309-BBEE-D298E964BB15}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AssemblyName>Outfitted</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <ApplicationVersion>1.0.0.0</ApplicationVersion>
-    <FileAlignment>512</FileAlignment>
-    <RootNamespace>Outfitted</RootNamespace>
-    <LangVersion>8.0</LangVersion>
-    <OutputPath>..\Assemblies\</OutputPath>
-    <CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>false</Optimize>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <OutputPath>..\..\Assemblies\</OutputPath>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <DefineConstants>
-    </DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <OutputPath>..\..\Assemblies\</OutputPath>
-    <DebugSymbols>true</DebugSymbols>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="0Harmony">
-      <HintPath>..\..\..\..\..\..\SteamLibrary\steamapps\workshop\content\294100\2009463077\Current\Assemblies\0Harmony.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Assembly-CSharp">
-      <HintPath>..\..\..\..\..\..\SteamLibrary\steamapps\common\RimWorld\RimWorldWin64_Data\Managed\Assembly-CSharp.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="CombatExtended">
-      <HintPath>..\..\..\..\..\..\SteamLibrary\steamapps\common\RimWorld\Mods\CombatExtended\Assemblies\CombatExtended.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="UnityEngine">
-      <HintPath>..\..\..\..\..\..\SteamLibrary\steamapps\common\RimWorld\RimWorldWin64_Data\Managed\UnityEngine.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="UnityEngine.CoreModule">
-      <HintPath>..\..\..\..\..\..\SteamLibrary\steamapps\common\RimWorld\RimWorldWin64_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="UnityEngine.IMGUIModule">
-      <HintPath>..\..\..\..\..\..\SteamLibrary\steamapps\common\RimWorld\RimWorldWin64_Data\Managed\UnityEngine.IMGUIModule.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="UnityEngine.InputLegacyModule">
-      <HintPath>..\..\..\..\..\..\SteamLibrary\steamapps\common\RimWorld\RimWorldWin64_Data\Managed\UnityEngine.InputLegacyModule.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.TextRenderingModule">
-      <HintPath>..\..\..\..\..\..\SteamLibrary\steamapps\common\RimWorld\RimWorldWin64_Data\Managed\UnityEngine.TextRenderingModule.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Debug.cs" />
-    <Compile Include="Dialog_ManageApparelPolicies_InitialSize_Patch.cs" />
-    <Compile Include="Dialog_ManageApparelPolicies_DoContentsRect_Patch.cs" />
-    <Compile Include="Logger.cs" />
-    <Compile Include="OutfittedSettigs.cs" />
-    <Compile Include="SettingsWindow.cs" />
-    <Compile Include="StatDefOf.cs" />
-    <Compile Include="WorkTypeDefOf.cs" />
-    <Compile Include="ExtendedOutfit.cs" />
-    <Compile Include="Outfitted.cs" />
-    <Compile Include="JobGiver_OptimizeApparel_ApparelScoreRaw_Patch.cs" />
-    <Compile Include="PlaySettings_DoPlaySettingsGlobalControls_Patch.cs" />
-    <Compile Include="Thing_DrawGUIOverlay_Patch.cs" />
-    <Compile Include="ResourceBank.cs" />
-    <Compile Include="StatPriority.cs" />
-    <Compile Include="Widgets_FloatRange.cs" />
-    <Compile Include="WorkPriorities.cs" />
-    <Compile Include="WorktypePriorities.cs" />
-    <Compile Include="Database\Priority.cs" />
-    <Compile Include="Database\OutfitDatabase_MakeNewOutfit_Patch.cs" />
-    <Compile Include="Database\OutfitDatabase_ExposeData_Patch.cs" />
-    <Compile Include="Database\OutfitDatabase_GenerateStartingOutfits_Patch.cs" />
-    <Compile Include="AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\RW_Utils\RW_JustUtils.csproj">
-      <Project>{7bd1ffb2-df18-44e5-8563-5ce0d57755a9}</Project>
-      <Name>RW_JustUtils</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+	<PropertyGroup>
+		<Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+		<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+		<ProjectGuid>{4BF28CA7-16EF-4309-BBEE-D298E964BB15}</ProjectGuid>
+		<OutputType>Library</OutputType>
+		<AssemblyName>Outfitted</AssemblyName>
+		<TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+		<ApplicationVersion>1.0.0.0</ApplicationVersion>
+		<FileAlignment>512</FileAlignment>
+		<RootNamespace>Outfitted</RootNamespace>
+		<LangVersion>8.0</LangVersion>
+		<OutputPath>..\Assemblies\</OutputPath>
+		<CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
+	</PropertyGroup>
+	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+		<PlatformTarget>AnyCPU</PlatformTarget>
+		<DebugSymbols>true</DebugSymbols>
+		<DebugType>pdbonly</DebugType>
+		<Optimize>false</Optimize>
+		<DefineConstants>DEBUG;TRACE</DefineConstants>
+		<ErrorReport>prompt</ErrorReport>
+		<WarningLevel>4</WarningLevel>
+		<OutputPath>..\..\Assemblies\</OutputPath>
+	</PropertyGroup>
+	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+		<PlatformTarget>AnyCPU</PlatformTarget>
+		<DebugType>pdbonly</DebugType>
+		<Optimize>true</Optimize>
+		<DefineConstants>
+		</DefineConstants>
+		<ErrorReport>prompt</ErrorReport>
+		<WarningLevel>4</WarningLevel>
+		<OutputPath>..\..\Assemblies\</OutputPath>
+		<DebugSymbols>true</DebugSymbols>
+	</PropertyGroup>
+	<ItemGroup>
+		<Reference Include="Assembly-CSharp">
+			<HintPath>..\..\..\..\..\..\SteamLibrary\steamapps\common\RimWorld\RimWorldWin64_Data\Managed\Assembly-CSharp.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="CombatExtended">
+			<HintPath>..\..\..\..\..\..\SteamLibrary\steamapps\common\RimWorld\Mods\CombatExtended\Assemblies\CombatExtended.dll</HintPath>
+		</Reference>
+		<Reference Include="System"/>
+		<Reference Include="System.Core"/>
+		<Reference Include="UnityEngine">
+			<HintPath>..\..\..\..\..\..\SteamLibrary\steamapps\common\RimWorld\RimWorldWin64_Data\Managed\UnityEngine.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="UnityEngine.CoreModule">
+			<HintPath>..\..\..\..\..\..\SteamLibrary\steamapps\common\RimWorld\RimWorldWin64_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="UnityEngine.IMGUIModule">
+			<HintPath>..\..\..\..\..\..\SteamLibrary\steamapps\common\RimWorld\RimWorldWin64_Data\Managed\UnityEngine.IMGUIModule.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="UnityEngine.InputLegacyModule">
+			<HintPath>..\..\..\..\..\..\SteamLibrary\steamapps\common\RimWorld\RimWorldWin64_Data\Managed\UnityEngine.InputLegacyModule.dll</HintPath>
+		</Reference>
+		<Reference Include="UnityEngine.TextRenderingModule">
+			<HintPath>..\..\..\..\..\..\SteamLibrary\steamapps\common\RimWorld\RimWorldWin64_Data\Managed\UnityEngine.TextRenderingModule.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+	</ItemGroup>
+	<ItemGroup>
+		<Compile Include="Debug.cs"/>
+		<Compile Include="Dialog_ManageApparelPolicies_InitialSize_Patch.cs"/>
+		<Compile Include="Dialog_ManageApparelPolicies_DoContentsRect_Patch.cs"/>
+		<Compile Include="Logger.cs"/>
+		<Compile Include="OutfittedSettigs.cs"/>
+		<Compile Include="SettingsWindow.cs"/>
+		<Compile Include="StatDefOf.cs"/>
+		<Compile Include="WorkTypeDefOf.cs"/>
+		<Compile Include="ExtendedOutfit.cs"/>
+		<Compile Include="Outfitted.cs"/>
+		<Compile Include="JobGiver_OptimizeApparel_ApparelScoreRaw_Patch.cs"/>
+		<Compile Include="PlaySettings_DoPlaySettingsGlobalControls_Patch.cs"/>
+		<Compile Include="Thing_DrawGUIOverlay_Patch.cs"/>
+		<Compile Include="ResourceBank.cs"/>
+		<Compile Include="StatPriority.cs"/>
+		<Compile Include="Widgets_FloatRange.cs"/>
+		<Compile Include="WorkPriorities.cs"/>
+		<Compile Include="WorktypePriorities.cs"/>
+		<Compile Include="Database\Priority.cs"/>
+		<Compile Include="Database\OutfitDatabase_MakeNewOutfit_Patch.cs"/>
+		<Compile Include="Database\OutfitDatabase_ExposeData_Patch.cs"/>
+		<Compile Include="Database\OutfitDatabase_GenerateStartingOutfits_Patch.cs"/>
+		<Compile Include="AssemblyInfo.cs"/>
+	</ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\RW_Utils\RW_JustUtils.csproj">
+			<Project>{7bd1ffb2-df18-44e5-8563-5ce0d57755a9}</Project>
+			<Name>RW_JustUtils</Name>
+		</ProjectReference>
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Lib.Harmony">
+			<Version>2.4.1</Version>
+		</PackageReference>
+	</ItemGroup>
+	<Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
 </Project>
