Proper calculation of worn apparel. Also applied to vanilla calculations

--- a/Source/Outfitted/Outfitted.csproj
+++ b/Source/Outfitted/Outfitted.csproj
@@ -67,12 +67,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Debug.cs" />
-    <Compile Include="Dialog_ManageApparelPolicies_InitialSize_Patch.cs" />
+    <Compile Include="HarmonyPatches\Dialog_ManageApparelPolicies_Patches.cs" />
     <Compile Include="Dialog_ManageApparelPolicies_DoContentsRect_Patch.cs" />
     <Compile Include="HarmonyPatches\JobGiver_OptimizeApparel_TryGiveJob_Patch.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="OutfittedGameComponent.cs" />
     <Compile Include="OutfittedSettigs.cs" />
+    <Compile Include="PawnContext.cs" />
     <Compile Include="SettingsWindow.cs" />
     <Compile Include="StatDefOf.cs" />
     <Compile Include="Utils\FloatMenuPreserveOrder.cs" />
