Fix for overlay to use WhatIfNotWorn method

--- a/Source/Outfitted/Outfitted.csproj
+++ b/Source/Outfitted/Outfitted.csproj
@@ -86,7 +86,7 @@
     <Compile Include="Outfitted.cs" />
     <Compile Include="HarmonyPatches\JobGiver_OptimizeApparel_ApparelScoreRaw_Patch.cs" />
     <Compile Include="PlaySettings_DoPlaySettingsGlobalControls_Patch.cs" />
-    <Compile Include="Thing_DrawGUIOverlay_Patch.cs" />
+    <Compile Include="HarmonyPatches\Thing_DrawGUIOverlay_Patch.cs" />
     <Compile Include="ResourceBank.cs" />
     <Compile Include="StatPriority.cs" />
     <Compile Include="Widgets_FloatRange.cs" />
