--- a/Source/Outfitted/Outfitted.csproj
+++ b/Source/Outfitted/Outfitted.csproj
@@ -66,6 +66,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApparelScoreInsulation.cs" />
     <Compile Include="ApparelScoreNeeds.cs" />
     <Compile Include="ApparelScorePriorities.cs" />
     <Compile Include="Debug.cs" />
