--- a/Source/Outfitted/Outfitted.csproj
+++ b/Source/Outfitted/Outfitted.csproj
@@ -69,9 +69,11 @@
     <Compile Include="ApparelScoreInsulation.cs" />
     <Compile Include="ApparelScoreNeeds.cs" />
     <Compile Include="ApparelScorePriorities.cs" />
+    <Compile Include="CacheWornApparel.cs" />
     <Compile Include="Debug.cs" />
     <Compile Include="HarmonyPatches\Dialog_ManageApparelPolicies_Patches.cs" />
     <Compile Include="Dialog_ManageApparelPolicies_DoContentsRect_Patch.cs" />
+    <Compile Include="HarmonyPatches\ConditionalPatches.cs" />
     <Compile Include="HarmonyPatches\JobGiver_OptimizeApparel_TryGiveJob_Patch.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="OutfittedGameComponent.cs" />
