--- a/Source/Outfitted/Outfitted.csproj
+++ b/Source/Outfitted/Outfitted.csproj
@@ -70,6 +70,7 @@
     <Compile Include="ApparelScoreNeeds.cs" />
     <Compile Include="ApparelScorePriorities.cs" />
     <Compile Include="CacheWornApparel.cs" />
+    <Compile Include="Database\Helpers.cs" />
     <Compile Include="Debug.cs" />
     <Compile Include="HarmonyPatches\Dialog_ManageApparelPolicies_Patches.cs" />
     <Compile Include="Dialog_ManageApparelPolicies_DoContentsRect_Patch.cs" />
@@ -77,9 +78,13 @@
     <Compile Include="HarmonyPatches\JobGiver_OptimizeApparel_TryGiveJob_Patch.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="OutfittedGameComponent.cs" />
+    <Compile Include="Settings\ITabHost.cs" />
+    <Compile Include="Settings\ITabView.cs" />
     <Compile Include="Settings\OutfittedSettigs.cs" />
     <Compile Include="PawnContext.cs" />
     <Compile Include="Settings\SettingsWindow.cs" />
+    <Compile Include="Settings\TabContent_Tune.cs" />
+    <Compile Include="Settings\TabContent_General.cs" />
     <Compile Include="StatDefOf.cs" />
     <Compile Include="Utils\FloatMenuPreserveOrder.cs" />
     <Compile Include="Utils\Listing_StandardExtensions.cs" />
