--- a/Source/Outfitted/Outfitted.csproj
+++ b/Source/Outfitted/Outfitted.csproj
@@ -75,6 +75,7 @@
     <Compile Include="HarmonyPatches\Dialog_ManageApparelPolicies_Patches.cs" />
     <Compile Include="Dialog_ManageApparelPolicies_DoContentsRect_Patch.cs" />
     <Compile Include="HarmonyPatches\ConditionalPatches.cs" />
+    <Compile Include="HarmonyPatches\JobGiver_OptimizeApparel_ApparelScoreGain_Patch.cs" />
     <Compile Include="HarmonyPatches\JobGiver_OptimizeApparel_TryGiveJob_Patch.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="OutfittedGameComponent.cs" />
