Stat cache is done. Also new stat getter for Outfitted

--- a/Source/Outfitted/Outfitted.csproj
+++ b/Source/Outfitted/Outfitted.csproj
@@ -80,7 +80,6 @@
     <Compile Include="HarmonyPatches\Dialog_ManagePolicies_DoWindowContents_Patch.cs" />
     <Compile Include="HarmonyPatches\JobGiver_OptimizeApparel_ApparelScoreGain_Patch.cs" />
     <Compile Include="HarmonyPatches\JobGiver_OptimizeApparel_TryGiveJob_Patch.cs" />
-    <Compile Include="HarmonyPatches\StatWorker_GetBaseValueFor_Patch.cs" />
     <Compile Include="HarmonyPatches\ThingWithComps_Destroy_Patch.cs" />
     <Compile Include="OutfittedGameComponent.cs" />
     <Compile Include="Settings\ITabHost.cs" />
@@ -94,7 +93,7 @@
     <Compile Include="StatWorkerOutfitted.cs" />
     <Compile Include="Utils\FloatMenuPreserveOrder.cs" />
     <Compile Include="Utils\Listing_StandardExtensions.cs" />
-    <Compile Include="Utils\LoggerMy.cs" />
+    <Compile Include="Utils\Logger.cs" />
     <Compile Include="Utils\RectExtensions.cs" />
     <Compile Include="Utils\Utils.cs" />
     <Compile Include="Utils\Utils_GUI.cs" />
